# coffeeeee

./: .gitignore  README.md  data_loader.py  environment.yml  pyproject.toml
notebooks/: EDA.ipynb
src/: __init__.py  data_loader.py  etl_pipeline.py  write_to_db.py
