[project]
name = "sleep-quality-analysis"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.26", 
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "pyarrow>=15.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "click>=8.0",
    "scikit-learn>=1.3",
    "jupyter>=1.0"
]